src/app/about.scss
#container-about {
  color: #b0b0b0;
  margin: 0 auto;
  #header-about {
    margin-top: -3%;
    background-image: url(../images/about/fs-bg.jpg);
    background-size: cover;
    width: 100%;

    img.image-left {
      display: inline-block;
      width: 100%;
    }

    .header-image {
      width: 40%;
    }

    .description {
      width: 40%;
      vertical-align: bottom;
      padding: 0 2em;
      padding-top: 181px;

      > p {
        padding-top: 15px;
      }
      .head-title {
	      font-size: 2.2em;
	      span {
	        font-weight: bold;
	        color: $primary-color;
 	      }
      }
    }
	}

	.rounded-red-button {
		border-radius: 12px;
		margin-top: 4px;
		font-weight: 500;
		font-size: .9em;
		color: $primary-color-darker-darker;
		border-color: $primary-color-darker-darker;
		border-style: solid;
		border-width: thin;
		padding: 5px 20px;
	}

	.bio-pic-mobile {
		display: none;
	}

	.agent-details {
		// display: none;
		position: fixed;
		top: 0;
		left: 0;
		right: 0;
		bottom: 0;
		z-index: 10;
		background: rgba(255, 255, 255, 0.8);
		.content {
			background-color: white;
			width: 60vw;
			margin: 300px auto 0 auto;
			position: relative;
			box-shadow: 0px 0px 2em gainsboro;
			.header {
				position: relative;
				margin-bottom: 5%;
				.bio-pic {
					position: absolute;
					top: -3px;
					left: -3px;
					height: 100%;
				}
				.contact {
					margin-left: 38%;
					font-size: 1.4em;
					display: inline-block;
					> h4 {
						color: black;
						font-size: 1.8em;
					}
				}
			}
			.bio {
				margin: 0 36px 25px 36px;
				color: black;
				opacity: .55;
				font-size: 1.3em;
				line-height: 110%;
				> h2 {
					font-size: 1.8em;
					opacity: 1;
				}
			}
			.footer {
				background-color: $primary-color;
				color: white;
				text-align: center;
				font-size: 2em;
				padding-top: 1px;
				.featured-listings {
					width: 100%;
					height: 100%;
					margin: 0 auto;
					display: flex;
					.agent-featured-listing {
						width: 33.33%;
						height: 200px;
					}
				}
			}
		}
	}

  .about-text {
    width: 100%;
    padding-top: 167px;
    .header-image {
      width: 50%;
      display: inline-block;
      vertical-align: bottom;
    }
    .description {
      width: 50%;
      line-height: 1.4;
      display: inline-block;
      vertical-align: bottom;
    }
  }
  .agents {
    padding: 5em 0;
    text-align: center;
  }
  .agent {
    position: relative;
    text-align: center;
    margin: 0.8em;
    box-shadow: 0px 0px 2em gainsboro;
    width: 22%;
    padding-bottom: 19px;
    border: 1px solid #c7c7c7;
    .bio-image {
      position: relative;
      img { width: 100%; }
      .image-title {
        font-size: 2em;
        span {font-weight: bold;}
        color: white;
        position: absolute;
        bottom: 1em;
        text-align: left;
        margin-left: 1em
		  }
		}
		.short-bio {
		  margin: 1em 1.5em;
      line-height: 1.8;
      padding: 28px 12px 2px 12px;
      text-align: left;
		}
		.bio-button {
		  display: inline-block;
		  color: $primary-color;
      border: 1px solid $primary-color;
      font-size: 1.1em;
		  padding: 0.4em 1em;
		  border-radius: 1em;
			margin-bottom: 1em;
			cursor: pointer;
		}
		.bio-contact {
		  margin-bottom: 1em;
		  line-height: 1.8;
		}
  }

  .section-header {
		padding: 3em 0 6em;
		background: $primary-color;
		text-align: center;
		color: white;
		.title {
		  font-size: 2em;
		  font-weight: bold;
		}
  }

  .specialty {
	  background: white;
	  margin-top: 3em;
	  background: white;
	  width: 100%;
  }

  .section-content {
    margin-top: -3%;
    margin-bottom: 142px;
    .about {
      position: relative;
      margin: 0 auto;
      width: 874px;

      .about-pic {
        display: block;
        width: 100%;
      }
      .map {
        position: absolute;
        top: 418px;
        left: 575px;
        width: 400px;

      }
    }
  }

  @media screen and (max-width: $breakpoint-small) {
    .section-content {
      margin: 0;
      .about {
        width: 100%;
        .map {
          position: static;
          width: 100%;
        }
      }
    }
    .ham-menu {
      background-size: 94%;
    }
    #header-about {
      .header-image {
        display: none;
      }

      .description {
        width: 100%;
        font-size: 3em;
        padding-top: 0;
        .head-title {
          text-align: center;
        }
        > p {
         font-size: 1.2em;
        }
      }
    }

    .agent {
      width: 90%;
      font-size: 4em;
		}

		.bio-pic-mobile {
			display: block;
			width: 88%;
			margin: 0 auto;
		}

		.agent-details {
			overflow: scroll;
			.content {
				background-color: white;
				width: 100%;
				height: 100%;
				margin: 0;
				box-shadow: 0px 0px 2em gainsboro;
				.header {
					margin-bottom: 5%;
					.bio-pic {
					  display: none;
					}
					.contact {
						width: 100%;
						font-size: 3em;
						margin: 0 auto;
						text-align: center;
						> h4 {
							color: black;
							font-size: 3.2em;
						}
					}
				}
				.bio {
					margin: 25px;
					padding: 0;
					color: black;
					opacity: .55;
					font-size: 2.5em;
					line-height: 110%;
					> h2 {
						opacity: 1;
					}
				}
				.footer {
					background-color: $primary-color;
					color: white;
					text-align: center;
					font-size: 2em;
					padding-top: 1px;
					.featured-listings {
						width: 100%;
						height: 100%;
						margin: 0;
						display: flex;
						flex-direction: row;
  					flex-flow: row wrap;
  					justify-content: center;
						.agent-featured-listing {
							width: 100%;
						  height: 15%;
						}
					}
				}
			}
		}
	}
}

